--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </head>
 <body>
     <div class="poster">
-        <h1>儿童游泳比赛</h1>
+        <h1>儿童游泳比哈萨克大连分行</h1>
         <h2>2025年夏季盛会</h2>
         <p>欢迎所有小游泳健将参加！</p>
         <p>展示你的游泳技巧，赢取丰厚奖品！</p>
