--- a/index.html
+++ b/index.html
@@ -1,1 +1,141 @@
-
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>儿童游泳比赛海报</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: linear-gradient(to bottom, #87CEEB, #1E90FF); /* 渐变的海洋背景 */
+            font-family: 'Comic Sans MS', cursive, sans-serif; /* 儿童画风格字体 */
+            color: white;
+            text-align: center;
+            overflow: hidden;
+        }
+        .poster {
+            position: relative;
+            background-color: rgba(255, 255, 255, 0.2); /* 半透明背景 */
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            z-index: 2;
+        }
+        h1 {
+            font-size: 3.5em;
+            margin: 0;
+            color: #FFD700; /* 金色标题 */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+        h2 {
+            font-size: 2.5em;
+            margin: 10px 0;
+            color: #FF6347; /* 珊瑚色副标题 */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+        p {
+            font-size: 1.5em;
+            margin: 10px 0;
+            color: #FFFFFF;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+        .date {
+            font-size: 2em;
+            font-weight: bold;
+            margin-top: 20px;
+            color: #FFD700; /* 金色日期 */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+        .lane {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 150px;
+            background: #1E90FF; /* 赛道底色 */
+            z-index: 1;
+        }
+        .lane::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 10px;
+            background: repeating-linear-gradient(
+                to right,
+                transparent,
+                transparent 20px,
+                white 20px,
+                white 40px
+            ); /* 赛道分隔线 */
+        }
+        .swimmer {
+            position: absolute;
+            bottom: 20px;
+            width: 50px;
+            height: 50px;
+            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="50" fill="%23FFD700"/><circle cx="35" cy="40" r="5" fill="%23000"/><circle cx="65" cy="40" r="5" fill="%23000"/><path d="M30 70 Q50 90 70 70" stroke="%23000" stroke-width="3" fill="none"/></svg>') no-repeat center center;
+            background-size: contain;
+            animation: swim 4s linear infinite;
+        }
+        @keyframes swim {
+            0% { left: -50px; }
+            100% { left: 100%; }
+        }
+        .swimmer:nth-child(1) { bottom: 40px; animation-duration: 5s; }
+        .swimmer:nth-child(2) { bottom: 80px; animation-duration: 6s; }
+        .swimmer:nth-child(3) { bottom: 120px; animation-duration: 7s; }
+        .palm-tree {
+            position: absolute;
+            bottom: 150px;
+            right: 20px;
+            width: 100px;
+            height: 200px;
+            background: #8B4513; /* 树干颜色 */
+            clip-path: polygon(40% 0%, 0% 100%, 100% 100%);
+        }
+        .palm-leaves {
+            position: absolute;
+            bottom: 200px;
+            right: -50px;
+            width: 200px;
+            height: 150px;
+            background: #228B22; /* 树叶颜色 */
+            clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+            transform: rotate(-20deg);
+        }
+        .sun {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 80px;
+            height: 80px;
+            background: #FFD700; /* 太阳颜色 */
+            border-radius: 50%;
+            box-shadow: 0 0 20px rgba(255, 215, 0, 0.8);
+        }
+    </style>
+</head>
+<body>
+    <div class="poster">
+        <h1>儿童游泳比赛</h1>
+        <h2>2025年夏季盛会</h2>
+        <p>欢迎所有小游泳健将参加！</p>
+        <p>展示你的游泳技巧，赢取丰厚奖品！</p>
+        <div class="date">日期：2025年7月17日</div>
+    </div>
+    <div class="lane"></div> <!-- 游泳赛道 -->
+    <div class="swimmer"></div> <!-- 游泳儿童 -->
+    <div class="swimmer"></div> <!-- 游泳儿童 -->
+    <div class="swimmer"></div> <!-- 游泳儿童 -->
+    <div class="palm-tree"></div> <!-- 椰子树树干 -->
+    <div class="palm-leaves"></div> <!-- 椰子树树叶 -->
+    <div class="sun"></div> <!-- 太阳 -->
+</body>
+</html>
